@@ -231,7 +231,7 @@ public class CaseFieldDefinition implements Serializable, CommonField, Copyable<
         if (caseField.isCompoundFieldType()) {
             caseField.getFieldTypeDefinition().getChildren().forEach(nestedField -> {
                 final List<AccessControlList> cloneACLs =
-                    acls.stream().map(AccessControlList::createCopy).collect(toList());
+                    new ArrayList<>(acls.stream().map(AccessControlList::duplicate).toList());
                 nestedField.setAccessControlLists(cloneACLs);
                 propagateACLsToNestedFields(nestedField, acls);
             });
@@ -407,8 +407,9 @@ public class CaseFieldDefinition implements Serializable, CommonField, Copyable<
         copy.setLiveUntil(this.getLiveUntil());
         copy.setOrder(this.getOrder());
         copy.setShowCondition(this.getShowCondition());
-        copy.setAccessControlLists(createACLCopyList(this.getAccessControlLists()));
-        copy.setComplexACLs(deepCopyComplexACLs(this.getComplexACLs()));
+        copy.setAccessControlLists(this.getAccessControlLists() == null
+            ? null : createShallowCopyList(this.getAccessControlLists()));
+        copy.setComplexACLs(this.getComplexACLs() == null ? null : createShallowCopyList(this.getComplexACLs()));
         copy.setMetadata(this.isMetadata());
         copy.setDisplayContext(this.getDisplayContext());
         copy.setDisplayContextParameter(this.getDisplayContextParameter());
@@ -417,17 +418,5 @@ public class CaseFieldDefinition implements Serializable, CommonField, Copyable<
         copy.setCategoryId(this.getCategoryId());
 
         return copy;
-    }
-
-    private List<ComplexACL> deepCopyComplexACLs(List<ComplexACL> complexACLs) {
-        if (complexACLs == null || complexACLs.isEmpty()) {
-            return complexACLs;
-        }
-
-        List<ComplexACL> copiedACLs = new ArrayList<>(complexACLs.size());
-        for (ComplexACL acl : complexACLs) {
-            copiedACLs.add(acl.deepCopy());
-        }
-        return copiedACLs;
     }
 }
